==> IESJandula/Reaktor_AutomationsServer/src/main/resources/Arduino/esp32_proyectores/Jandula_Base.cpp <==
#include "Jandula_Base.h"
#include "base64.hpp"
#include <ArduinoJson.h>

void setupJandulaBase()
{
  // Validamos si la conexión a LittleFS es accesible
  validarSiConexionLittleFSEsAccesible();

  // Si no hay ningún error general mientras se validó la conexión a LittleFS
  if (errorGeneral.length() == 0)
  {
    // Validamos si la tarjeta SD es accesible junto con un fichero de configuración accesible
    validarSiSDCardYFicheroConfiguracionAccesible() ;
  }

  // Si no hay ningún error general mientras se validó la tarjeta SD
  if (errorGeneral.length() == 0)
  {
    // Si la tarjeta SD y su fichero de configuración son accesibles ...
    if (sdYFicheroConfiguracionAccesible)
    {
      // ... procedemos a la comparación y copia de los archivos
      compararYCopiarFicherosSDyLittleFS();
    }
  }
  
  // Si no hay ningún error general mientras se comparó y copió los archivos
  if (errorGeneral.length() == 0)
  {
    // Cargamos la configuración desde el archivo de configuración
    parseaFicheroConfiguracionJandulaBase();
  }

  // Si no hay ningún error general mientras se cargó la configuración ...
  if (errorGeneral.length() == 0)
  {
    // Conectamos a la red WiFi
    conectarWiFi();
  }
      
  // Si no hay ningún error general mientras se conectó a la red WiFi y la conexión a la red WiFi es correcta ...
  if (errorGeneral.length() == 0 && WiFi.status() == WL_CONNECTED)
  {
    // ... entonces sincronizamos la hora con el servidor NTP
    sincronizarHoraConServidorNTP();
  }

  // Si no hay ningún error general mientras se sincronizó la hora con el servidor NTP ...
  if (errorGeneral.length() == 0)
  {
    // Obtenemos la dirección MAC de la tarjeta WiFi
    macAddress = WiFi.macAddress();
  
    // Mostramos la dirección MAC de la tarjeta WiFi
    registrarLog("INFO", "MAC guardada: " + macAddress);

    // Obtenemos el token de Firebase
    obtenerTokenJWT();
  }
}

void validarSiConexionLittleFSEsAccesible()
{
  // Mostramos el mensaje de inicio de validación del sistema de archivos LittleFS
  Serial.println("INFO: Comenzando la validación del sistema de archivos LittleFS");

  // Validamos si el sistema de archivos LittleFS es accesible
  sistemaArchivosLittleFSAccesible = LittleFS.begin();

  // Si no es accesible el sistema de archivos LittleFS ...
  if (!sistemaArchivosLittleFSAccesible)
  {
    // Intentamos formatear y montar el sistema de archivos LittleFS
    sistemaArchivosLittleFSAccesible = LittleFS.begin(true);

    // Si no es accesible el sistema de archivos LittleFS ...
    if (!sistemaArchivosLittleFSAccesible)
    {
      // Almacenamos el error en la variable global errorGeneral
      errorGeneral = "FATAL: No se ha podido formatear y montar el sistema de archivos LittleFS";

      // Mostramos un mensaje de error
      Serial.println(errorGeneral);
    }
    else
    {
      // Mostramos un mensaje de información
      Serial.println("INFO: El sistema de archivos LittleFS se ha formateado y montado correctamente");
    }
  }
}

void compararYCopiarFicherosSDyLittleFS()
{
  // Validamos si el fichero existe en el sistema de archivos LittleFS
  bool ficheroLocalLitleFSEncontrado = LittleFS.exists(RUTA_FICHERO_CONFIGURACION);
  
  // Mostramos si el fichero de configuración existe en el sistema de archivos LittleFS y en la tarjeta SD
  String ficheroLittleYsdEncontrados = "fichero de configuración en LittleFS encontrado?: " + String(ficheroLocalLitleFSEncontrado) + ", fichero de configuración en la tarjeta SD encontrado?: " + String(sdYFicheroConfiguracionAccesible) ;
  registrarLog("INFO", ficheroLittleYsdEncontrados);

  // Si el fichero local existe y el fichero en la tarjeta SD existe ...
  if (ficheroLocalLitleFSEncontrado && sdYFicheroConfiguracionAccesible)
  {
    // Abrimos ambos ficheros de la tarjeta SD para comparar los timestamps de modificación
    File ficheroSD = SD.open(RUTA_FICHERO_CONFIGURACION, "r");

    // Obtenemos los timestamps de modificación para ambos ficheros
    unsigned long estampaTiempoLocalFicheroLittleFS = obtenerTimestampFicheroConfiguracionLittleFS();
    unsigned long estampaTiempoFicheroSD            = ficheroSD.getLastWrite();

    // Cerramos el fichero de configuración de la tarjeta SD
    ficheroSD.close();

    // Si los timestamps de modificación son diferentes, comparamos y copiamos el fichero de configuración de la tarjeta SD al sistema de archivos LittleFS
    compararTimeStampsYcopiarSiFicherosSDyLittleFSSonDiferentes(estampaTiempoLocalFicheroLittleFS, estampaTiempoFicheroSD);
  }
  else if (sdYFicheroConfiguracionAccesible)
  {
    // Si el fichero de configuración en la tarjeta SD existe, ...
    // ... copiamos el fichero de configuración de la tarjeta SD al sistema de archivos LittleFS
    copiarFicheroDeSDaLittleFS();
    
    // Mostramos el timestamp de modificación del fichero de configuración en la tarjeta SD
    registrarLog("INFO", "Nueva estampa de tiempo del fichero de configuración en la tarjeta SD guardada");
  }
}

void conectarWiFi()
{
  // Mostramos un mensaje de inicio de conexión
  registrarLog("INFO", "Iniciando conexión a la red WiFi SSID: " + wifiSSID);
  registrarLog("INFO", "Contraseña: " + wifiPassword);

  // Conectamos a la red WiFi
  WiFi.mode(WIFI_STA);
  WiFi.begin(wifiSSID.c_str(), wifiPassword.c_str());

  // Inicializamos el contador de intentos
  int intentos = 0;

  // Intentamos conectar a la red WiFi
  while (WiFi.status() != WL_CONNECTED && intentos < 30)
  {
    // Mostramos un punto de espera
    registrarLog("INFO", ".");

    // Incrementamos el contador de intentos
    intentos++;

    // Esperamos el tiempo de delay antes de reintentar
    delay(INTENTOS_DELAY);
  }

  // Si no se conecta a la red WiFi, se muestra un mensaje de error
  if (WiFi.status() != WL_CONNECTED)
  {
    // Mostramos un mensaje de error
    registrarLog("FATAL", "No se pudo conectar a la red WiFi");
  }
  else
  {
    // Mostramos un mensaje de conexión correcta
    registrarLog("INFO", "Conectado a la red WiFi");

    // Mostramos la IP de la red WiFi
    registrarLog("INFO", "IP de la red WiFi: " + WiFi.localIP().toString());
  }
}

void sincronizarHoraConServidorNTP()
{
  bool sincronizacionRealizada = false;

  // Mostramos un mensaje de inicio de sincronización
  registrarLog("INFO", "Iniciando sincronización de la hora con el servidor NTP");

  // Iniciamos la sincronización de la hora con el servidor NTP
  configTzTime(TZ_INFO, "pool.ntp.org", "time.nist.gov", "time.google.com");

  // Inicializamos la variable de sincronización realizada
  struct tm timeinfo;

  // Inicializamos el contador de intentos
  int intentos = 0;

  // Intentamos sincronizar la hora con el servidor NTP
  while (!sincronizacionRealizada && intentos < MAXIMO_INTENTOS_HTTP)
  {
    // Si se obtiene la fecha y hora correctamente, se sale del bucle
    sincronizacionRealizada = getLocalTime(&timeinfo);

    // Si no se obtiene la fecha y hora correctamente, se reintenta la sincronización
    if (!sincronizacionRealizada)
    {
      // Mostramos un mensaje de error y se incrementa el contador de intentos
      registrarLog("INFO", ".");

      // Incrementamos el contador de intentos
      intentos++;

      // Esperamos el tiempo de delay antes de reintentar
      delay(INTENTOS_DELAY);
    }
    else
    {
      // Inicializamos la variable de fecha y hora formateada
      char formattedDate[30];

      // Formateamos la fecha y hora
      // %Y: Año (4 dígitos)
      // %m: Mes (2 dígitos)
      // %d: Día (2 dígitos)
      // %H: Hora (2 dígitos)
      // %M: Minuto (2 dígitos)
      // %S: Segundo (2 dígitos)
      strftime(formattedDate, sizeof(formattedDate), "%Y-%m-%d %H:%M:%S", &timeinfo);

      // Mostramos el mensaje de sincronización correcta
      registrarLog("INFO", "Fecha y hora sincronizada correctamente: " + String(formattedDate));
    }
  }

  // Si finalmente no se ha podido obtener la fecha y hora del servidor NTP,
  // se muestra un mensaje de error
  if (!sincronizacionRealizada)
  {
    // Gestionamos el mensaje de error
    registrarLog("FATAL", "No se ha podido obtener la fecha y hora del servidor NTP después de varios intentos.");
  }
}
