==> IESJandula/Reaktor_AutomationsServer/src/main/resources/puertas/esp32/Arduino/iesjandula-commons-sp32/Jandula_Base.cpp <==
#include "Jandula_Base.h"
#include "base64.hpp"
#include <ArduinoJson.h>

void setupJandulaBase()
{
  // Validamos si la conexión a LittleFS es accesible
  validarSiConexionLittleFSEsAccesible();

  // Si no hay ningún error general mientras se validó la conexión a LittleFS
  if (errorGeneralJandulaBase == "")
  {
    // Validamos si la tarjeta SD es accesible
    validarSiSDCardEsAccesible() ;
  }

  // Si no hay ningún error general mientras se validó la tarjeta SD
  if (errorGeneralJandulaBase == "")
  {
    // Si la tarjeta SD es accesible ...
    if (tarjetaSDAccesible)
    {
      // ... procedemos a la comparación y copia de los archivos
      compararYCopiarFicherosSDyLittleFS(RUTA_FICHERO_CONFIGURACION);
    
      // Desmontamos la tarjeta SD después de procesar
      SD.end();
    }
  }
  
  // Si no hay ningún error general mientras se comparó y copió los archivos
  if (errorGeneralJandulaBase == "")
  {
    // Cargamos la configuración desde el archivo de configuración
    parseaFicheroConfiguracion(RUTA_FICHERO_CONFIGURACION);
  }

  // Si no hay ningún error general mientras se cargó la configuración ...
  if (errorGeneralJandulaBase == "")
  {
    // Conectamos a la red WiFi
    conectarWiFi();
  }
      
  // Si no hay ningún error general mientras se conectó a la red WiFi y la conexión a la red WiFi es correcta ...
  if (errorGeneralJandulaBase == "" && WiFi.status() == WL_CONNECTED)
  {
    // ... entonces sincronizamos la hora con el servidor NTP
    sincronizarHoraConServidorNTP();
  }

  // Si no hay ningún error general mientras se sincronizó la hora con el servidor NTP ...
  if (errorGeneralJandulaBase == "")
  {
    // Obtenemos la dirección MAC de la tarjeta WiFi
    macAddress = WiFi.macAddress();
  
    // Mostramos la dirección MAC de la tarjeta WiFi
    Serial.print("MAC guardada: ");
    Serial.println(macAddress);

    // Obtenemos el token de Firebase
    obtenerTokenJWT();
  }
}

void validarSiConexionLittleFSEsAccesible()
{
  // Mostramos el mensaje de inicio de validación del sistema de archivos LittleFS
  Serial.println("INFO: Comenzando la validación del sistema de archivos LittleFS");

  // Validamos si el sistema de archivos LittleFS es accesible
  sistemaArchivosLittleFSAccesible = LittleFS.begin();

  // Si no es accesible el sistema de archivos LittleFS ...
  if (!sistemaArchivosLittleFSAccesible)
  {
    // Intentamos formatear y montar el sistema de archivos LittleFS
    sistemaArchivosLittleFSAccesible = LittleFS.begin(true);

    // Si no es accesible el sistema de archivos LittleFS ...
    if (!sistemaArchivosLittleFSAccesible)
    {
      // Almacenamos el error en la variable global errorGeneralJandulaBase
      errorGeneralJandulaBase = "ERROR: No se ha podido formatear y montar el sistema de archivos LittleFS";

      // Mostramos un mensaje de error
      Serial.println(errorGeneralJandulaBase);

      // Indica que la conexión a LittleFS es inaccesible
      conexionLittleFSInaccesibleFuncion();
    }
    else
    {
      // Mostramos un mensaje de información
      Serial.println("INFO: El sistema de archivos LittleFS se ha formateado y montado correctamente");

      // Indica que la conexión a LittleFS es accesible
      conexionLittleFSAccesibleFuncion();
    }
  }
}

void compararYCopiarFicherosSDyLittleFS(const String& rutaFichero)
{
  // Validamos si el fichero existe en el sistema de archivos LittleFS
  bool ficheroLocalLitleFSEncontrado = validarExistenciaFicheroLittleFS(rutaFichero);
  
  // Validamos si el fichero existe en la tarjeta SD
  bool ficheroSDEncontrado = validarExistenciaFicheroSD(rutaFichero);

  // Si el fichero local existe y el fichero en la tarjeta SD existe ...
  if (ficheroLocalLitleFSEncontrado && ficheroSDEncontrado)
  {
    // Abrimos ambos ficheros de la tarjeta SD para comparar los timestamps de modificación
    File ficheroSD = SD.open(rutaFichero, "r");

    // Si no se puede abrir el archivo de la tarjeta SD ...
    if (!ficheroSD)
    {
      // Almacenamos el error en la variable global errorGeneralJandulaBase
      errorGeneralJandulaBase = "ERROR: No se pudo abrir el fichero de la tarjeta SD cuando se ha ido a copiar a LittleFS";

      // Mostramos un mensaje de error
      Serial.println(errorGeneralJandulaBase);
    }
    else
    {
      // Obtenemos los timestamps de modificación para ambos archivos
      unsigned long estampaTiempoLocalFicheroLittleFS = obtenerTimestampDesdeFichero(rutaFichero);
      unsigned long estampaTiempoFicheroSD            = ficheroSD.getLastWrite();

      // Cerramos el fichero de la tarjeta SD
      ficheroSD.close();

      // Si los timestamps de modificación son diferentes, comparamos y copiamos el fichero de la tarjeta SD al sistema de archivos LittleFS
      compararTimeStampsYcopiarSiFicherosSDyLittleFSSonDiferentes(rutaFichero, estampaTiempoLocalFicheroLittleFS, estampaTiempoFicheroSD);
    }
  }
  else if (ficheroSDEncontrado)
  {
    // Si el fichero en la tarjeta SD existe, ...
    // ... copiamos el fichero de la tarjeta SD al sistema de archivos LittleFS
    copiarFicheroDeSDaLittleFS(rutaFichero);
    
    // Mostramos el timestamp de modificación del fichero en la tarjeta SD
    Serial.println("INFO: Nueva estampa de tiempo del fichero en la tarjeta SD");
  }
  else
  {
    // Si el fichero local no existe y el fichero en la tarjeta SD no existe, almacenamos el error en la variable global errorGeneralJandulaBase y mostramos un mensaje de error
    errorGeneralJandulaBase = "ERROR: No se encontró el fichero en el sistema de archivos LittleFS ni en la tarjeta SD";

    // Mostramos un mensaje de error
    Serial.println(errorGeneralJandulaBase);
  }
}

void conectarWiFi()
{
  // Si el SSID o la contraseña no están configurados, se muestra un mensaje de error y se apagan los LEDs de online y offline
  if (wifiSSID.length() == 0 || wifiPassword.length() == 0)
  {
    // Mostramos un mensaje de error
    errorGeneralJandulaBase = "ERROR: SSID/PASSWORD vacíos (no se cargó la configuración de la red WiFi)";

    // Mostramos un mensaje de error
    Serial.println(errorGeneralJandulaBase);

    // Mostramos un mensaje de conexión incorrecta a tráves de los leds
    conexionOnlineIncorrecta();
  }
  else
  {
    // Mostramos un mensaje de inicio de conexión
    Serial.println("INFO: Iniciando conexión a la red WiFi");

    // Conectamos a la red WiFi
    WiFi.mode(WIFI_STA);
    WiFi.begin(wifiSSID.c_str(), wifiPassword.c_str());

    // Inicializamos el contador de intentos
    int intentos = 0;

    // Intentamos conectar a la red WiFi
    while (WiFi.status() != WL_CONNECTED && intentos < 30)
    {
      // Mostramos un punto de espera
      Serial.print(".");

      // Incrementamos el contador de intentos
      intentos++;

      // Esperamos el tiempo de delay antes de reintentar
      delay(INTENTOS_DELAY);
    }

    // Si no se conecta a la red WiFi, se muestra un mensaje de error y se apagan los LEDs de online y offline
    if (WiFi.status() != WL_CONNECTED)
    {
      // Mostramos un mensaje de error
      errorGeneralJandulaBase = "ERROR: No se pudo conectar a la red WiFi";

      // Mostramos un mensaje de error
      Serial.println(errorGeneralJandulaBase);

      // Mostramos un mensaje de conexión incorrecta a tráves de los leds
      conexionOnlineIncorrecta();
    }
    else
    {
      // Mostramos un mensaje de conexión correcta
      Serial.println("INFO: Conectado a la red WiFi");

      // Mostramos la IP de la red WiFi
      Serial.print("IP: ");
      Serial.println(WiFi.localIP());

      // Mostramos un mensaje de conexión correcta a tráves de los leds
      conexionOnlineCorrecta();
    }
  }
}

void sincronizarHoraConServidorNTP()
{
  bool sincronizacionRealizada = false;

  // Mostramos un mensaje de inicio de sincronización
  Serial.println("INFO: Iniciando sincronización de la hora con el servidor NTP");

  // Iniciamos la sincronización de la hora con el servidor NTP
  configTzTime(TZ_INFO, "pool.ntp.org", "time.nist.gov", "time.google.com");

  // Inicializamos la variable de sincronización realizada
  struct tm timeinfo;

  // Inicializamos el contador de intentos
  int intentos = 0;

  // Intentamos sincronizar la hora con el servidor NTP
  while (!sincronizacionRealizada && intentos < MAXIMO_INTENTOS_HTTP)
  {
    // Si se obtiene la fecha y hora correctamente, se sale del bucle
    sincronizacionRealizada = getLocalTime(&timeinfo);

    // Si no se obtiene la fecha y hora correctamente, se reintenta la sincronización
    if (!sincronizacionRealizada)
    {
      // Mostramos un mensaje de error y se incrementa el contador de intentos
      Serial.print(".");

      // Incrementamos el contador de intentos
      intentos++;

      // Esperamos el tiempo de delay antes de reintentar
      delay(INTENTOS_DELAY);
    }
    else
    {
      // Inicializamos la variable de fecha y hora formateada
      char formattedDate[30];

      // Formateamos la fecha y hora
      // %Y: Año (4 dígitos)
      // %m: Mes (2 dígitos)
      // %d: Día (2 dígitos)
      // %H: Hora (2 dígitos)
      // %M: Minuto (2 dígitos)
      // %S: Segundo (2 dígitos)
      strftime(formattedDate, sizeof(formattedDate), "%Y-%m-%d %H:%M:%S", &timeinfo);

      // Mostramos el mensaje de sincronización correcta
      Serial.println("INFO: Fecha y hora sincronizada correctamente: " + String(formattedDate));
    }
  }

  // Si finalmente no se ha podido obtener la fecha y hora del servidor NTP,
  // se muestra un mensaje de error y se apagan los LEDs de online y offline
  if (!sincronizacionRealizada)
  {
    // Mostramos un mensaje de error
    errorGeneralJandulaBase = "ERROR: No se ha podido obtener la fecha y hora del servidor NTP después de varios intentos.";

    // Mostramos un mensaje de error
    Serial.println(errorGeneralJandulaBase);

    // Mostramos un mensaje de sincronización incorrecta a tráves de los leds
    conexionOnlineIncorrecta();
  }
}
